[package]
name = "exit-stack"
version = "0.1.0"
description = "Dynamically pin values to the stack, with no macros."
authors = ["Aurelia Molzer <5550310+197g@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/exit-stack"
repository = "https://github.com/HeroicKatora/static-alloc"
readme = "Readme.md"
categories = ["embedded", "memory-management", "no-std"]

[dependencies]
static-alloc = { path = "../static-alloc", version = "0.2.1" }

[dev-dependencies]
pin-utils = "0.1"
